<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_01"
                style="@style/Item">

                <TextView
                    style="@style/ItemTitle"
                    android:text="@string/exercise01" />

                <TextView
                    android:id="@+id/tv_01"
                    style="@style/ItemContent"
                    android:text="@string/exercise11" />

                <ImageView style="@style/ItemArrow" />
            </LinearLayout>

            <View style="@style/Line.Hor_margin" />

            <LinearLayout
                android:id="@+id/ll_02"
                style="@style/Item">

                <TextView
                    style="@style/ItemTitle"
                    android:text="@string/exercise02" />

                <TextView
                    android:id="@+id/tv_02"
                    style="@style/ItemContent"
                    android:text="@string/exercise12" />

                <ImageView style="@style/ItemArrow" />
            </LinearLayout>

            <View style="@style/Line.Hor_margin" />

            <LinearLayout
                android:id="@+id/ll_03"
                android:visibility="gone"
                style="@style/Item">

                <TextView
                    style="@style/ItemTitle"
                    android:text="@string/exercise03" />

                <TextView
                    android:id="@+id/tv_03"
                    style="@style/ItemContent"
                    android:text="@string/exercise13" />

                <ImageView style="@style/ItemArrow" />
            </LinearLayout>

            <View style="@style/Line.Hor_margin" />

            <LinearLayout
                android:id="@+id/ll_04"
                style="@style/Item">

                <TextView
                    style="@style/ItemTitle"
                    android:text="@string/exercise04" />

                <TextView
                    android:id="@+id/tv_04"
                    style="@style/ItemContent"
                    android:text="@string/exercise14" />

                <ImageView style="@style/ItemArrow" />
            </LinearLayout>

            <View style="@style/Line.Hor_margin" />

            <LinearLayout
                android:id="@+id/ll_05"
                style="@style/Item">

                <TextView
                    style="@style/ItemTitle"
                    android:text="@string/exercise05" />

                <TextView
                    android:id="@+id/tv_05"
                    style="@style/ItemContent"
                    android:text="@string/exercise15" />

                <ImageView style="@style/ItemArrow" />
            </LinearLayout>

            <View style="@style/Line.Hor_margin" />

            <LinearLayout
                android:id="@+id/ll_06"
                style="@style/Item">

                <TextView
                    style="@style/ItemTitle"
                    android:text="@string/exercise06" />

                <TextView
                    android:id="@+id/tv_06"
                    style="@style/ItemContent"
                    android:text="@string/exercise16" />

                <ImageView style="@style/ItemArrow" />
            </LinearLayout>

            <View style="@style/Line.Hor_margin" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_next"
        style="@style/button_big"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="下一步" />
</LinearLayout>