<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_knowledge_weakness"
        android:layout_marginLeft="20dp"
        android:text="@string/my_section"
        android:textColor="@color/text_gray_s"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#F0FAFF"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_knowledge_point_name"
            style="@style/my_tv_details_style"
            android:text="@string/my_section_name" />

        <TextView
            style="@style/my_tv_details_style"
            android:text="@string/my_error_rate" />
    </LinearLayout>

    <com.up.common.widget.MyListView
        android:id="@+id/lv_section_name"
        android:layout_width="match_parent"
        android:focusable="false"
        android:divider="@null"
        android:layout_height="wrap_content"/>

    <include layout="@layout/view_no_data"/>
</LinearLayout>