<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"

        android:background="@color/top_bar_color">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/Top_Back" />

        <TextView
            style="@style/Top_Title"
            android:text="@string/home_select_papers" />

        <LinearLayout
            android:id="@+id/ll_daochu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/home_screen"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_normal" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@mipmap/icon_daochu" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/text_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_sort1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_the_volume"
                android:textColor="#4e4e4e"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_sort1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_sort_null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_difficulty"
                android:textColor="#4e4e4e"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_sort2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_sort_null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_average"
                android:textColor="#4e4e4e"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_sort3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_sort_null" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />

        <include layout="@layout/view_empty"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sure"
        style="@style/button_big"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/next" />
</LinearLayout>